--- a/片假名.html
+++ b/片假名.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <!DOCTYPE html>
 <html>
 <head>
@@ -21,6 +20,7 @@
             border: 1px solid #ccc;
             padding: 10px;
             text-align: center;
+            position: relative;
         }
         .kana {
             font-size: 24px;
@@ -37,9 +37,25 @@
         .incorrect {
             background-color: #FFB6C6;
         }
-        button {
+        .answer {
+            position: absolute;
+            bottom: -20px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 12px;
+            color: #666;
+            display: none;
+        }
+        .show-answer .answer {
             display: block;
-            margin: 20px auto;
+        }
+        .button-container {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin: 20px 0;
+        }
+        button {
             padding: 10px 20px;
             font-size: 16px;
             background-color: #4CAF50;
@@ -51,11 +67,20 @@
         button:hover {
             background-color: #45a049;
         }
+        #showAnswerBtn {
+            background-color: #2196F3;
+        }
+        #showAnswerBtn:hover {
+            background-color: #1976D2;
+        }
     </style>
 </head>
 <body>
     <div class="container" id="kanaContainer"></div>
-    <button onclick="resetGame()">再來一次</button>
+    <div class="button-container">
+        <button onclick="resetGame()">再來一次</button>
+        <button id="showAnswerBtn" onclick="toggleAnswers()">顯示答案</button>
+    </div>
 
     <script>
         const katakana = [
@@ -77,6 +102,8 @@
             {char: 'ン', roma: 'n'}
         ];
 
+        let isShowingAnswers = false;
+
         function shuffleArray(array) {
             for (let i = array.length - 1; i > 0; i--) {
                 const j = Math.floor(Math.random() * (i + 1));
@@ -97,6 +124,7 @@
                 box.innerHTML = `
                     <div class="kana">${item.char}</div>
                     <input type="text" onInput="checkAnswer(this, '${item.roma}')" data-index="${index}">
+                    <div class="answer">${item.roma}</div>
                 `;
                 container.appendChild(box);
             });
@@ -114,6 +142,23 @@
 
         function resetGame() {
             createKanaBoxes();
+            isShowingAnswers = false;
+            document.getElementById('kanaContainer').classList.remove('show-answer');
+            document.getElementById('showAnswerBtn').textContent = '顯示答案';
+        }
+
+        function toggleAnswers() {
+            const container = document.getElementById('kanaContainer');
+            const btn = document.getElementById('showAnswerBtn');
+            isShowingAnswers = !isShowingAnswers;
+            
+            if (isShowingAnswers) {
+                container.classList.add('show-answer');
+                btn.textContent = '隱藏答案';
+            } else {
+                container.classList.remove('show-answer');
+                btn.textContent = '顯示答案';
+            }
         }
 
         // Initial setup
